monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/Enum.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar Enum {

  enum E = "a";

}
