monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4094/A4094.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4094;

grammar A4094 extends de.monticore.grammar.cocos.invalid.A4094.A4094Super{

  @Override
  Foo = "foo";

}
